# AluminatiAI-GreenTune

./: .gitignore  LICENSE  README.md
agent/: GETTING_STARTED.md  README.md  __init__.py  ab.py  agent.py  amd_collector.py  apple_collector.py  baseline.py  benchmark.py  benchmark_m5.py  cli.py  collector.py  command_receiver.py  config.py  dcgm_probe.py  fast_collector.py  gaudi_collector.py  install.sh  intel_arc_collector.py  machine_id.py  memory_leak_detector.py  metrics_server.py  optimize.py  pid_smoother.py  pyproject.toml  rapl_collector.py  recommendation_reporter.py  requirements.txt  ring_buffer.py  tag_client.py  uploader.py
agent/attribution/: __init__.py  engine.py  pid_resolver.py  process_probe.py  rules.py
agent/data/wal/: metrics.quarantine  metrics.wal
agent/demos/: __init__.py  investor_demo.py  scaling_report.py
agent/demos/workloads/: __init__.py  idle_loader.py  matmul_workload.py  resnet_workload.py
agent/deploy/: alerts.rules.yml  aluminatai-agent.env.example  aluminatai-agent.service
agent/efficiency/: __init__.py  carbon.py  carbon_scheduler.py  cloud_detect.py  curve_builder.py  gpu_specs.py  hardware_match.py  mig.py  power_control.py  profiler.py  stats.py
agent/finetune/: AMD_SETUP_GUIDE.md  HACKATHON_SUBMISSION.md  __init__.py  dataset_builder.py  energy_callback.py  eval_model.py  greentune.py  greentune_agent.py  greentune_swarm.py  rocm_power.py  smoke_test.py  verify_rocm.py
agent/integrations/: __init__.py  mlflow_callback.py  otel_exporter.py  wandb_callback.py
agent/reports/: chargeback.py
agent/schedulers/: __init__.py  base.py  detect.py  kubernetes.py  runai.py  slurm.py
agent/storage/: tsdb.py
agent/tests/: __init__.py  benchmark_overhead.py  multi_workload_attribution.py  powercap_ab_test.py  runpod_demo.py  test_ab.py  test_apple_collector.py  test_attribution.py  test_carbon.py  test_collector.py  test_gaudi_collector.py  test_intel_arc_collector.py  test_observability.py  test_optimize.py  test_rapl_collector.py  test_security.py  test_stats.py  validate_energy.py
dashboard/app/admin/fine-tuning/: page.tsx
dashboard/app/api/admin/fine-tuning/: route.ts
dashboard/app/api/admin/fine-tuning/swarm/: route.ts
